--- a/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
+++ b/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
@@ -174,6 +174,21 @@
             </objects>
             <point key="canvasLocation" x="-25" y="878"/>
         </scene>
+        <!--Star Wars Specie Detail View Controller-->
+        <scene sceneID="naq-2Z-eN8">
+            <objects>
+                <viewController id="uaS-Km-Wm8" customClass="StarWarsSpecieDetailViewController" customModule="StarWarsInfo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="GXN-X2-PRe">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="QU3-tA-Sjj"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dBl-zV-n6u" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-658" y="1693"/>
+        </scene>
         <!--Star Wars Starship Detail View Controller-->
         <scene sceneID="CaO-x7-7Xr">
             <objects>
@@ -279,6 +294,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="uaS-Km-Wm8" kind="show" id="MWP-vY-t4E"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
