--- a/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
+++ b/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
@@ -295,7 +295,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="uaS-Km-Wm8" kind="show" id="MWP-vY-t4E"/>
+                                    <segue destination="uaS-Km-Wm8" kind="show" identifier="speciesSegue" id="MWP-vY-t4E"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
