--- a/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
+++ b/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
@@ -222,6 +222,21 @@
             </objects>
             <point key="canvasLocation" x="-26" y="1645"/>
         </scene>
+        <!--Star Wars Film Detail View Controller-->
+        <scene sceneID="SuJ-sK-uGF">
+            <objects>
+                <viewController id="pv9-gB-nMi" customClass="StarWarsFilmDetailViewController" customModule="StarWarsInfo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eRC-nI-bxG">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="zu4-ci-TSN"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yxb-aK-aoP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="705" y="1633"/>
+        </scene>
         <!--Films-->
         <scene sceneID="ZuV-QD-1GM">
             <objects>
@@ -238,6 +253,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="pv9-gB-nMi" kind="show" identifier="segueFilm" id="Pas-zH-YMK"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
