--- a/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
+++ b/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
@@ -199,13 +199,111 @@
                     <view key="view" contentMode="scaleToFill" id="GXN-X2-PRe">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Aliens - x many" translatesAutoresizingMaskIntoConstraints="NO" id="rzE-au-Jzr">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7E8-yS-rcb">
+                                <rect key="frame" x="112" y="93" width="50" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Classification: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="29i-F2-MOz">
+                                <rect key="frame" x="125" y="122" width="111" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Designation: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uta-Cl-kq4">
+                                <rect key="frame" x="136" y="151" width="100" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lifespan: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9E9-og-Jwx">
+                                <rect key="frame" x="136" y="187" width="74" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Language: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2uZ-AZ-dDV">
+                                <rect key="frame" x="101" y="216" width="85" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="updateName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MJj-ZF-uPU">
+                                <rect key="frame" x="182" y="93" width="98.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="updateClass" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kRa-Ka-0eM">
+                                <rect key="frame" x="236" y="122" width="133" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="updateDesigna" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TOJ-sh-G25">
+                                <rect key="frame" x="236" y="151" width="116" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="updateLifespan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nzo-Rf-HKP">
+                                <rect key="frame" x="210" y="187" width="118.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="updateLanguage" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hbR-dx-XbV">
+                                <rect key="frame" x="182" y="216" width="187" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="29i-F2-MOz" firstAttribute="top" secondItem="7E8-yS-rcb" secondAttribute="bottom" constant="8" id="1QI-t0-dRi"/>
+                            <constraint firstItem="QU3-tA-Sjj" firstAttribute="trailing" secondItem="2uZ-AZ-dDV" secondAttribute="trailing" constant="189" id="35B-yF-hxl"/>
+                            <constraint firstItem="nzo-Rf-HKP" firstAttribute="top" secondItem="Uta-Cl-kq4" secondAttribute="bottom" constant="15" id="8Eu-Fz-eZs"/>
+                            <constraint firstItem="QU3-tA-Sjj" firstAttribute="trailing" secondItem="hbR-dx-XbV" secondAttribute="trailing" constant="6" id="GgK-JM-i9H"/>
+                            <constraint firstItem="nzo-Rf-HKP" firstAttribute="leading" secondItem="9E9-og-Jwx" secondAttribute="trailing" id="HnS-bs-Usf"/>
+                            <constraint firstItem="QU3-tA-Sjj" firstAttribute="trailing" secondItem="MJj-ZF-uPU" secondAttribute="trailing" constant="94.5" id="HpC-8L-ATa"/>
+                            <constraint firstItem="Uta-Cl-kq4" firstAttribute="top" secondItem="29i-F2-MOz" secondAttribute="bottom" constant="8" id="I0M-Vf-S94"/>
+                            <constraint firstItem="nzo-Rf-HKP" firstAttribute="leading" secondItem="9E9-og-Jwx" secondAttribute="trailing" id="J5l-jA-CDY"/>
+                            <constraint firstItem="MJj-ZF-uPU" firstAttribute="top" secondItem="QU3-tA-Sjj" secondAttribute="top" constant="29" id="J80-gk-srM"/>
+                            <constraint firstItem="7E8-yS-rcb" firstAttribute="top" secondItem="QU3-tA-Sjj" secondAttribute="top" constant="29" id="L9G-bf-IW2"/>
+                            <constraint firstItem="QU3-tA-Sjj" firstAttribute="trailing" secondItem="TOJ-sh-G25" secondAttribute="trailing" constant="23" id="O23-QK-wvo"/>
+                            <constraint firstItem="hbR-dx-XbV" firstAttribute="top" secondItem="9E9-og-Jwx" secondAttribute="bottom" constant="8" id="P0k-63-mFQ"/>
+                            <constraint firstItem="kRa-Ka-0eM" firstAttribute="leading" secondItem="29i-F2-MOz" secondAttribute="trailing" id="RQI-2g-kfa"/>
+                            <constraint firstItem="7E8-yS-rcb" firstAttribute="leading" secondItem="QU3-tA-Sjj" secondAttribute="leading" constant="112" id="RdN-oe-Q1e"/>
+                            <constraint firstItem="9E9-og-Jwx" firstAttribute="top" secondItem="Uta-Cl-kq4" secondAttribute="bottom" constant="15" id="VCj-XX-36O"/>
+                            <constraint firstItem="29i-F2-MOz" firstAttribute="leading" secondItem="QU3-tA-Sjj" secondAttribute="leading" constant="125" id="WQL-he-EbN"/>
+                            <constraint firstItem="TOJ-sh-G25" firstAttribute="leading" secondItem="Uta-Cl-kq4" secondAttribute="trailing" id="XyC-Mo-gCo"/>
+                            <constraint firstItem="TOJ-sh-G25" firstAttribute="leading" secondItem="Uta-Cl-kq4" secondAttribute="trailing" id="ZHx-N0-B7x"/>
+                            <constraint firstItem="Uta-Cl-kq4" firstAttribute="leading" secondItem="QU3-tA-Sjj" secondAttribute="leading" constant="136" id="egC-Tb-9tc"/>
+                            <constraint firstItem="2uZ-AZ-dDV" firstAttribute="top" secondItem="9E9-og-Jwx" secondAttribute="bottom" constant="8" id="fOP-Zz-Q3S"/>
+                            <constraint firstItem="kRa-Ka-0eM" firstAttribute="top" secondItem="MJj-ZF-uPU" secondAttribute="bottom" constant="8" id="j4o-bE-fvp"/>
+                            <constraint firstItem="2uZ-AZ-dDV" firstAttribute="leading" secondItem="QU3-tA-Sjj" secondAttribute="leading" constant="101" id="jl4-g3-5Nx"/>
+                            <constraint firstItem="QU3-tA-Sjj" firstAttribute="trailing" secondItem="nzo-Rf-HKP" secondAttribute="trailing" constant="46.5" id="lXt-qd-49g"/>
+                            <constraint firstItem="TOJ-sh-G25" firstAttribute="top" secondItem="kRa-Ka-0eM" secondAttribute="bottom" constant="8" id="lxO-wa-Rdt"/>
+                            <constraint firstItem="9E9-og-Jwx" firstAttribute="leading" secondItem="QU3-tA-Sjj" secondAttribute="leading" constant="136" id="nh8-WL-fbE"/>
+                            <constraint firstItem="MJj-ZF-uPU" firstAttribute="leading" secondItem="7E8-yS-rcb" secondAttribute="trailing" constant="20" id="pfk-VC-hvC"/>
+                            <constraint firstItem="QU3-tA-Sjj" firstAttribute="trailing" secondItem="kRa-Ka-0eM" secondAttribute="trailing" constant="6" id="rZu-lg-sNH"/>
+                            <constraint firstItem="kRa-Ka-0eM" firstAttribute="leading" secondItem="29i-F2-MOz" secondAttribute="trailing" id="vrZ-bG-stg"/>
+                            <constraint firstItem="hbR-dx-XbV" firstAttribute="leading" secondItem="QU3-tA-Sjj" secondAttribute="leading" constant="182" id="yeZ-4G-i8O"/>
+                            <constraint firstItem="MJj-ZF-uPU" firstAttribute="leading" secondItem="7E8-yS-rcb" secondAttribute="trailing" constant="20" id="zB0-Fd-nir"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="QU3-tA-Sjj"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dBl-zV-n6u" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-658" y="1693"/>
+            <point key="canvasLocation" x="-658.39999999999998" y="1692.5037481259371"/>
         </scene>
         <!--Star Wars Starship Detail View Controller-->
         <scene sceneID="CaO-x7-7Xr">
@@ -415,6 +513,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Aliens - x many" width="414" height="736"/>
         <image name="Group" width="100" height="98"/>
         <image name="GroupFilm" width="100" height="98"/>
         <image name="GroupPeople" width="100" height="98"/>
