--- a/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
+++ b/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
@@ -146,14 +146,14 @@
             </objects>
             <point key="canvasLocation" x="1233" y="-99"/>
         </scene>
-        <!--View Controller-->
+        <!--Star Wars Vehicle Detail View Controller-->
         <scene sceneID="HiG-IN-o3L">
             <objects>
-                <viewController id="ehs-rD-oaQ" sceneMemberID="viewController">
+                <viewController id="ehs-rD-oaQ" customClass="StarWarsVehicleDetailViewController" customModule="StarWarsInfo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="faq-jK-oYH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="P86-A2-zdM"/>
                     </view>
                 </viewController>
