converting over to swift 4 decodable

--- a/StarWarsInfo/StarWarsInfo/Base.lproj/LaunchScreen.storyboard
+++ b/StarWarsInfo/StarWarsInfo/Base.lproj/LaunchScreen.storyboard
@@ -26,7 +26,7 @@
                         <constraints>
                             <constraint firstItem="Cr4-6u-DfQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="2aJ-s1-h0D"/>
                             <constraint firstItem="Cr4-6u-DfQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="61Q-UM-wDC"/>
-                            <constraint firstItem="Cr4-6u-DfQ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="8hu-gZ-65L"/>
+                            <constraint firstItem="Cr4-6u-DfQ" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailing" id="8hu-gZ-65L"/>
                             <constraint firstItem="Cr4-6u-DfQ" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="SSO-8O-2P9"/>
                             <constraint firstItem="Cr4-6u-DfQ" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="SzE-8L-psx"/>
                             <constraint firstItem="Cr4-6u-DfQ" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="juE-or-wgJ"/>
